<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="AniMo.com.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="AniMo.com.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="AniMo.com.ui.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="AniMo.com.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" >
<!--        navigate between store and inventory -->
        <action
            android:id="@+id/action_storeFragment_to_inventoryFragment"
            app:destination="@id/navigation_inventory" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="AniMo.com.ui.inventory.InventoryFragment"
        android:label="Inventory"
        tools:layout="@layout/fragment_inventory">
<!--        <action-->
<!--            android:id="@+id/action_inventoryFragment_to_storeFragment"-->
<!--            app:destination="@id/navigation_store" />-->
    </fragment>

</navigation>