<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/create_account"/>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:hint="Enter name"
            android:layout_margin="10dp"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_margin="10dp"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:hint="Enter Email"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_margin="10dp"
            android:text="@string/username_text"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:hint="Enter Username"
            android:layout_margin="10dp"
            android:inputType="text"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_margin="10dp"
            android:text="@string/password_text"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:hint="****"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/signup_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="Sign Up"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="cancel"/>


</LinearLayout>
    </ScrollView>